--- a/index.css
+++ b/index.css
@@ -21,8 +21,8 @@ body {
     position: absolute;
     width: 110px;
     height: 80px;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
 
     background: #EA4737;
     margin-left: 547px;
@@ -175,7 +175,7 @@ body {
     position: absolute;
     width: 35px;
     height: 368px;
-    left: 0px;
+    left: 0;
     top: 1px;
     margin-top: 79px;
     background: #2998E2;
@@ -384,7 +384,7 @@ body {
 
     color: #FFFFFF;
     margin-left: 860px;
-    margin-top: 1100;
+    margin-top: 1100px;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -909,7 +909,7 @@ body {
 .img_BT {
     margin: 0;
     padding: 0;
-    width: 413;
+    width: 413px;
     list-style-type: none;
 }
 
@@ -925,7 +925,7 @@ body {
 .names {
     margin: 0;
     padding: 0;
-    width: 413;
+    width: 413px;
     list-style-type: none;
 
 }
@@ -987,7 +987,7 @@ body {
 .Netflix {
     margin: 0;
     padding: 0;
-    width: 413;
+    width: 413px;
     list-style-type: none;
 }
 
